@@ -26,7 +26,6 @@ THE SOFTWARE
 
 using System;
 using System.Diagnostics;
-using System.Drawing;
 using System.Threading;
 using System.Windows.Automation;
 using DW.CodedUI.BasicElements.Data;
