@@ -29,4 +29,4 @@ using System.Reflection;
 [assembly: AssemblyCompany("my-libraries David Wendland")]
 [assembly: AssemblyCopyright("Copyright © my-libraries David Wendland 2012-2015")]
 [assembly: AssemblyTrademark("")]
-[assembly: AssemblyVersion("2.4.2.2013")]
+[assembly: AssemblyVersion("3.0.0.2013")]
